# hungrychicken

./: Cargo.toml  TODO.md  config.json
src/: bot.rs  main.rs  update.rs
