[package]
name = "hungrychicken"
version = "3.0.29"
edition = "2021"

[dependencies]
iced = { version = "0.13.1", features = ["async-std"]}
async-std = "1.13.0"
regex = "1.11.1"
enigo = "0.3.0"
clipboard-win = "5.4.0"
rand = "0.9.0"
winapi = "0.3.9"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"]}
self_update = "0.42.0"
screenshots = "0.8.10"
rodio = "0.20.1"
image = { version = "0.25", default-features = false, features = ["png"] }
