[package]
name = "hungrychicken"
version = "3.0.29"
edition = "2024"

[dependencies]
iced = { version = "0.13.1", features = ["tokio"]}
regex = "1.11.1"
enigo = "0.5.0"
rand = "0.9.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"]}
self_update = "0.42.0"
screenshots = "0.8.10"
rodio = "0.20.1"
image = { version = "0.25", default-features = false, features = ["png"] }
tokio = "1.47.1"
